fix logo clipping

--- a/src/components/ui/Logotype/Logotype.module.scss
+++ b/src/components/ui/Logotype/Logotype.module.scss
@@ -1,3 +1,4 @@
 a.logo {
   font-size: 1.1em;
+  min-width: 0;
 }
